--- a/app/views/notifier/order_received.text.erb
+++ b/app/views/notifier/order_received.text.erb
@@ -1,4 +1,4 @@
-Dear <%= @order.name %>
+Dear <%= @order.first_name %>
 Thank you for your recent order from The Pragmatic Store.
 You ordered the following items:
 <%= render @order.line_items %>
